--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Restuarants#new</h1>
-<p>Find me in app/views/restuarants/new.html.erb</p>
+<h1>New Restaurant</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', restaurants_path %>
