--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Restuarants#edit</h1>
-<p>Find me in app/views/restuarants/edit.html.erb</p>
+<h1>Edit Restaurant</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back to Restaurants', restaurants_path %>
