--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Seat Yourself</h1>
 <% @restaurants.each do |restaurant| %>
-	<p style="border: 1px solid black; padding: 5px"> <%= restaurant[:name] %></br> <%= restaurant[:address] %></br> <%= restaurant[:category] %>, <%= restaurant[:summary][0..50] %>...[see more] </p> <% end %>
+	<p style="border: 1px solid black; padding: 5px"> <%= link_to restaurant[:name], "/restaurants/#{restaurant.id}" %></br> <%= restaurant[:address] %></br> <i>Category:</i> <%= restaurant[:category] %></br> <%= restaurant[:summary][0..50] %>...[see more] </p> <% end %>
