add guests to database

--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,16 +1,6 @@
 <h1>Sign up</h1>
 
 <%= form_for @guest do |f| %>
-	<%= if @guest.errors.any? %>
-	<div class="error_messages">
-		<h2>Form is invalid</h2>
-		<ul>
-			<%= for message in @user.errors.full_messages %>
-			<li><%= message %></li>
-			<%= end %>
-		</ul>
-	</div>
-<% end %>
 
 <div class="field">
 	<%= f.label :first_name %></br>
@@ -28,6 +18,11 @@
 </div>
 
 <div class="field">
+	<%= f.label :email %></br>
+	<%= f.email_field :email %>
+</div>
+
+<div class="field">
 	<%= f.label :password %></br>
 	<%= f.password_field :password %>
 </div>
@@ -36,5 +31,7 @@
 	<%= f.label :password_confirmation %></br>
 	<%= f.password_field :password_confirmation %>
 </div>
+
 <div class="actions"><%= f.submit %></div>
+
 <% end %>
