--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,17 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
 
 <%= yield %>
 
+	<p class="guestinfo">
+		<% if current_guest %>
+		Signed in as <%=  current_guest.email %>, <%= link_to "Log out", session_path("current"), :method => :delete %>
+		<% else %>
+		<%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_guest_path %>
+		<% end %>
+	</p>
 </body>
 </html>
