--- a/app/assets/stylesheets/restuarants.css.scss
+++ b/app/assets/stylesheets/restuarants.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Restuarants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.restaurant{
+	width: 50%;
+	margin: 0 auto
+}
+
+.border{
+	border-top: 2px solid black
+}
+
+button{
+	background-color: #95FFFC;
+	text-align: center;
+	vertical-align: middle;
+}
+
+button:hover{
+	background-color: blue;
+}
