--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,30 +1,31 @@
-<section style = "width: 50%; margin: 0 auto">
-	<h2><%= @restaurant[:name] %></h2>
-	<%= @restaurant[:address] %></br>
-	Category: <%= @restaurant[:category] %></br>
-	<div style="border-top: 2px solid black"> Summary: <%= @restaurant[:summary] %></div></br>
-</section>
+<div class="restaurant">
+	<section>
+		<h2><%= @restaurant[:name] %></h2>
+		<%= @restaurant[:address] %></br>
+		Category: <%= @restaurant[:category] %></br>
+		<div class="border"> Summary: <%= @restaurant[:summary] %></div></br>
+	</section>
 
-<div style = "width: 50%; margin: 0 auto">
-<%= link_to "Edit Restaurant", edit_restaurant_path %></br>
-<%= link_to "Back Restaurant", restaurants_path %>
-</div>
+	<div>
+		<button><%= link_to "Edit Restaurant", edit_restaurant_path %></button></br>
+		<button><%= link_to "Back Restaurant", restaurants_path %></button>
+	</div>
 
-
-<% if current_guest %>
-<div class ="reservation">
-	<h3>Reservations</h3>
-	<%= form_for([@restaurant, @reservation]) do |f| %>
-	<div class="field">
-		<%= f.label "Reservation date" %></br>
-		<%= f.datetime_select :time, order: [:month, :day] %>
+	<% if current_guest %>
+	<div class ="reservation">
+		<h3>Reservations</h3>
+		<%= form_for([@restaurant, @reservation]) do |f| %>
+		<div class="field">
+			<%= f.label "Reservation date" %></br>
+			<%= f.datetime_select :time, order: [:year, :month, :day] %>
+		</div>
+		<div class="field">
+			<%= f.label :number_of_guests %></br>
+			<%= f.number_field :number_of_guests %>
+		</div>
+		<div class="actions">
+			<%= f.submit %>
+		</div>
+		<% end %>
+		<% end %>
 	</div>
-	<div class="field">
-		<%= f.label :number_of_guests %></br>
-		<%= f.number_field :number_of_guests %>
-	</div>
-	<div class="actions">
-		<%= f.submit %>
-	</div>
-	<% end %>
-<% end %>
