--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,17 +1,6 @@
 <h1>Sign up</h1>
 
 <%= form_for @guest do |f| %>
-	<%= if @guest.errors.any? %>
-	<div class="error_messages">
-		<h2>Form is invalid</h2>
-		<ul>
-			<%= for message in @user.errors.full_messages %>
-			<li><%= message %></li>
-			<%= end %>
-		</ul>
-	</div>
-<% end %>
-
 <div class="field">
 	<%= f.label :first_name %></br>
 	<%= f.text_field :first_name %>
@@ -20,6 +9,11 @@
 <div class="field">
 	<%= f.label :last_name %></br>
 	<%= f.text_field :last_name %>
+</div>
+
+<div class="field">
+	<%= f.label :email %></br>
+	<%= f.text_field :email %>
 </div>
 
 <div class="field">
