--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Reservations#index</h1>
-<p>Find me in app/views/reservations/index.html.erb</p>
+<h2>Reservations</h2>
+<button style = "margin-top: -30px"><%= link_to 'Back to Restaurants', restaurants_path %></button></br>
+<%= @reservations.each do |r| %>
+	<strong><%= r.restaurant.name %></strong></br>
+	<em><%= r.restaurant.address %></em></br>
+	<strong>Guest Name: </strong><%= r.guest.first_name %> <%= r.guest.last_name %></br>
+	<strong>Date & Time: </strong><%= r.time %></br>
+	<strong>Number of Guests: </strong><%= r.number_of_guests %></br></br>
+<% end %>
