--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,20 @@
-<h1>Seat Yourself</h1>
+<div class="wrap"><h1>Seat Yourself</h1>
+
 <% @restaurants.each do |restaurant| %>
-	<p style="border: 1px solid black; padding: 5px"> <%= link_to restaurant[:name], "/restaurants/#{restaurant.id}" %></br> <%= restaurant[:address] %></br> <i>Category:</i> <%= restaurant[:category] %></br> <%= restaurant[:summary][0..50] %>...[see more] </p> <% end %>
+<div class="box">
+
+	<div style="float: left">
+		<img src="<%= restaurant[:url] %>" style="height: 75px; width: 80px; margin-right: 15px; border: 2px solid black"/>
+	</div>
+
+
+	<b style="font-size: 18px"><%= link_to restaurant[:name], "/restaurants/#{restaurant.id}" %></b></br>
+	<%= restaurant[:address] %></br>
+	<i>Category:</i> <%= restaurant[:category] %></br>
+	<%= restaurant[:summary][0..50] %>...[see more]
+
+
+</div>
+
+<% end %>
+</div>
