--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,16 @@
 	text-decoration: none;
 }
 
+body, p, form, h1, h2, h3, h4, h5, h6, a, header, section, button, div {
+	padding: 0;
+	margin: 0;
+}
 .guestinfo {
-	width: 60%;
+	padding: 0;
 	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 20px;
+	width: 100%;
+	height: 50px;
+	border: 1px solid black;
 }
