--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -15,11 +15,13 @@
 .box{
 	border: 1px solid black;
 	padding: 5px;
+	padding-left: 9px;
 	margin: 15px 0;
 }
 
 .box:hover{
 	border-left: 4px solid red;
+	padding-left: 6px;
 }
 
 button{
